[project]
name = "financial-risk-and-customer-retention"
version = "0.1.0"
description = ""
authors = [
    {name = "Zainab Manzoor",email = "zainabmanzoorzoor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
